--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,6 +20,7 @@
   .quiz .quiz__options {
     width: 100%;
     gap: 0.75rem;
+    margin-top: 20px;
   }
   .quiz button {
     font-size: 1.125rem;
