--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -23,6 +23,7 @@
         .quiz__options {
             width: 100%;
             gap: 0.75rem;
+            margin-top: 20px;
         }
 
         button {
